# eeprom-24lc32

./: Cargo.toml  README.md
examples/: test.rs
src/: lib.rs
