[package]
name = "eeprom-24lc32"
version = "0.0.1"
authors = ["Alex Eden <alexandereden91@gmail.com>"]
edition = "2021"
description = "[WIP] Platform-agnostic device driver for the 24LC32 EEPROM chip."
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexeden/eeprom-24lc32"
exclude = [".cargo", "memory.x"]

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
rtt-target = { version = "0.3", features = ["cortex-m"] }
stm32f4xx-hal = { features = ["rt", "stm32f405", "sdio"], version = "0.13" }

[profile.release]
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
incremental = false
opt-level = 's'
